<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_language"
        android:icon="@drawable/ic_menu_language"
        android:title="@string/action_app_language"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_language_en"
                android:title="@string/action_language_en" />
            <item
                android:id="@+id/action_language_zh"
                android:title="@string/action_language_zh" />
            <item
                android:id="@+id/action_language_tw"
                android:title="@string/action_language_tw" />
        </menu>
    </item>

    <item
        android:id="@+id/action_view_options"
        android:checkable="true"
        android:icon="@drawable/ic_menu_options"
        android:title="@string/action_view_options"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:enabled="false"
                android:title="@string/action_title_sorting" />

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_label"
                    android:title="@string/action_sort_label" />
                <item
                    android:id="@+id/action_sort_package_name"
                    android:title="@string/action_sort_package_name" />
                <item
                    android:id="@+id/action_sort_install_time"
                    android:title="@string/action_sort_install_time" />
                <item
                    android:id="@+id/action_sort_update_time"
                    android:title="@string/action_sort_update_time" />
            </group>

            <item
                android:enabled="false"
                android:title="@string/action_title_options" />

            <group android:checkableBehavior="all">
                <item
                    android:id="@+id/action_debuggable_first"
                    android:title="@string/action_debuggable_first" />
                <item
                    android:id="@+id/action_show_system"
                    android:title="@string/action_show_system" />
                <item
                    android:id="@+id/action_show_debug"
                    android:title="@string/action_show_debug" />
            </group>

        </menu>
    </item>

</menu>
